@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.405 2011/04/18 00:23:17 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.406 2011/04/18 00:25:55 blueness Exp $
+
+  18 Apr 2011; Anthony G. Basile <blueness@gentoo.org>
+  hardened-sources-2.6.37-r7.ebuild:
+  Stable on amd64, x86
 
   18 Apr 2011; Anthony G. Basile <blueness@gentoo.org>
   hardened-sources-2.6.32-r42.ebuild:
